// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Permission edit modal Submit button text should be Create when user is creating tenant 1`] = `
<button
  className="euiButton euiButton--primary euiButton--fill"
  disabled={false}
  id="submit"
  onClick={[Function]}
  type="button"
>
  <span
    className="euiButton__content"
  >
    <span
      className="euiButton__text"
    >
      Create
    </span>
  </span>
</button>
`;

exports[`Permission edit modal Submit button text should be Save when user is updating tenant 1`] = `
<button
  className="euiButton euiButton--primary euiButton--fill"
  disabled={false}
  id="submit"
  onClick={[Function]}
  type="button"
>
  <span
    className="euiButton__content"
  >
    <span
      className="euiButton__text"
    >
      Save
    </span>
  </span>
</button>
`;
